# unit_parser

./: .gitignore  .travis.yml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
tests/: test_units.py
tests/test_files/: just_key.txt
unit_parser/: __init__.py  convert.py  test_units.py  units.py
unit_parser/test_files/: different_signature_lengths.txt  duplicate_entry.txt  negative_quantity.txt  non_alphabetic_unit_name.txt  valid_custom.txt
unit_parser/units/: units.txt
yaucl/: units.py
yaucl/units/: units.txt
